--- a/sass/style.css
+++ b/sass/style.css
@@ -1,3 +1,89 @@
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&family=DM+Serif+Display&family=Epilogue&family=Karla&family=Passion+One&family=Roboto&family=Rubik&family=Source+Sans+Pro&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: content-box;
+}
 
+body {
+  font-family: "Epilogue";
+  font-size: 19px;
+}
+
+.main {
+  background-color: hsl(0deg, 0%, 98%);
+}
+.main__banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main__text {
+  width: 40%;
+  margin-top: 180px;
+  padding: 40px 120px;
+}
+.main__text h1 {
+  color: hsl(0deg, 0%, 8%);
+  font-size: 95px;
+}
+.main__text p {
+  margin: 50px 0;
+  line-height: 30px;
+  color: hsl(0deg, 0%, 41%);
+  font-weight: bold;
+}
+.main__text button {
+  padding: 8px 24px;
+  color: hsl(0deg, 0%, 98%);
+  font-size: 19px;
+  background-color: hsl(0deg, 0%, 8%);
+  border-radius: 10px;
+  font-family: "Epilogue";
+  height: 30px;
+  cursor: pointer;
+  margin: 20px 0;
+}
+.main__img-icons {
+  display: flex;
+  margin: 110px 0;
+  gap: 80px;
+}
+.main__img-banner {
+  width: 35%;
+  padding: 40px 120px;
+}
+.main__img-banner img {
+  width: 90%;
+  object-fit: cover;
+}
+.main__img-banner2 img {
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .main__banner {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+  .main__text {
+    padding: 0px;
+    width: 120%;
+    text-align: center;
+  }
+  .main__text h1 {
+    font-size: 60px;
+  }
+  .main__img-icons {
+    justify-content: center;
+    gap: 60px;
+  }
+  .main__img-banner img {
+    display: none;
+  }
+  .main__img-banner2 img {
+    display: flex;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
