--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -6,6 +6,6 @@
     box-sizing:content-box;
 }
 
-.header, .header__izquierda, .header__derecha, .header__izquierda__features, .header__izquierda__company, .header__izquierda__careers, .header__izquierda__logo, .header__izquierda__about{
+.header, .header__izquierda, .header__derecha, .header__izquierda__features, .header__izquierda__company, .header__izquierda__careers, .header__izquierda__logo, .header__izquierda__about, .header__izquierda__hamburguer{
     display: flex;
 }
