--- a/sass/style.css
+++ b/sass/style.css
@@ -5,7 +5,7 @@
   box-sizing: content-box;
 }
 
-.header, .header__izquierda, .header__derecha, .header__izquierda__features, .header__izquierda__company, .header__izquierda__careers, .header__izquierda__logo, .header__izquierda__about {
+.header, .header__izquierda, .header__derecha, .header__izquierda__features, .header__izquierda__company, .header__izquierda__careers, .header__izquierda__logo, .header__izquierda__about, .header__izquierda__hamburguer {
   display: flex;
 }
 
@@ -36,6 +36,10 @@
   margin-left: 6px;
   margin-top: 6px;
 }
+.header__izquierda__features:hover {
+  color: black;
+  cursor: pointer;
+}
 .header__izquierda__company {
   margin-left: 60px;
   font-family: "Epilogue", sans-serif;
@@ -47,6 +51,10 @@
   height: 8px;
   margin-left: 6px;
   margin-top: 6px;
+}
+.header__izquierda__company:hover {
+  color: black;
+  cursor: pointer;
 }
 .header__izquierda__careers {
   margin-left: 60px;
@@ -67,6 +75,9 @@
 .header__izquierda__about:hover {
   color: black;
   cursor: pointer;
+}
+.header__izquierda__hamburguer {
+  display: none;
 }
 .header__derecha {
   background-color: blue;
@@ -97,6 +108,149 @@
   color: black;
   border: 1px solid black;
   cursor: pointer;
+}
+
+#contenedorFlotante {
+  background-color: whitesmoke;
+  margin-top: 50px;
+  margin-left: -100px;
+  width: 160px;
+  height: 120px;
+  padding: 10px;
+  z-index: 100;
+  border-radius: 20px;
+  gap: 3px;
+  position: absolute;
+}
+
+.letra {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  width: 250px;
+}
+
+.hidden {
+  display: none;
+}
+
+.cardFL {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+
+.imageFLO {
+  display: flex;
+  width: 250px;
+  margin-left: 15px;
+  margin-top: 10px;
+  z-index: 100;
+}
+
+.imageFLO:hover {
+  cursor: pointer;
+}
+
+#contenedorFlotante1 {
+  background-color: whitesmoke;
+  margin-top: 50px;
+  margin-left: -10px;
+  width: 85px;
+  height: 100px;
+  padding: 10px;
+  z-index: 100;
+  border-radius: 20px;
+  gap: 3px;
+  position: absolute;
+}
+
+.letra1 {
+  display: flex;
+  align-items: center;
+  margin-left: -8px;
+  margin-top: 2px;
+  width: 250px;
+}
+
+.hidden1 {
+  display: none;
+}
+
+.cardFL1 {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+
+.imageFLO2 {
+  display: flex;
+  width: 250px;
+  margin-left: 15px;
+  margin-top: 10px;
+  z-index: 100;
+}
+
+.imageFLO1:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .header__izquierda {
+    width: 100%;
+    justify-content: space-between;
+  }
+  .header__izquierda__features {
+    display: none;
+  }
+  .header__izquierda__company {
+    display: none;
+  }
+  .header__izquierda__careers {
+    display: none;
+  }
+  .header__izquierda__about {
+    display: none;
+  }
+  .header__izquierda__hamburguer {
+    display: flex;
+  }
+  .header__derecha {
+    display: none;
+  }
+  #contenedorFlotante2 {
+    background-color: red;
+    margin-top: 30px;
+    margin-right: 0px;
+    width: 350px;
+    height: 2100px;
+    padding: 10px;
+    z-index: 100;
+    gap: 3px;
+  }
+  .letra2 {
+    display: flex;
+    align-items: center;
+    margin-right: -130px;
+    margin-top: 20px;
+    z-index: 100;
+  }
+  .hidden2 {
+    display: none;
+  }
+  .cardFL2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .imageFLO3 {
+    display: flex;
+    margin-left: 15px;
+    margin-top: 10px;
+    z-index: 100;
+  }
+  .imageFLO3:hover {
+    cursor: pointer;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
